Clear reference time after SetMediaTime in video-only time source.

Without this, after a seek we may remove valid frames because we
think we are in an underflow state.

BUG=642761
TEST=new unittest.

Review-Url: https://codereview.chromium.org/2322393002
Cr-Commit-Position: refs/heads/master@{#417678}

Former-commit-id: 983881fde249f0bcc6e63426237016a98536d1ea